# PCS_311976

./: second_file.txt
Esercitazione_1/: CMakeLists.txt  Esercizio_1.cpp  esempio.cpp  programma
Esercitazione_2/: CMakeLists.txt  Esercizio2.cpp  esercizio_figura1.cpp
Esercitazione_3/: CMakeLists.txt  main.cpp  rational.hpp  vec2_test
Esercitazione_4/: CMakeLists.txt  algoritmi_ordinamento.hpp  misura_tempi.cpp  test_funzionali.cpp
esercitazione1/: Esercizio_1.cpp
